Trying to solve the sizing problem I'm facing with the indavidual divs not filling the larger container without spill-over.

--- a/styles.css
+++ b/styles.css
@@ -8,15 +8,23 @@ body {
     align-items: center;
 }
 
+#grid {
+    box-sizing: border-box;
+    width: 500px;
+    height: 500px;
+}
 
 .colum{
     display: inline-block;
+
 }
 
 
 .colum div {
+    box-sizing: inherit;
     background-color: rebeccapurple;
-    padding: 1em;
+    padding: 10px;
+
     border-style: solid;
     border-color: black;
     border-width: 1px;
